Fri Apr 06 18:12:36 BST 2007  Olly Betts <olly@survex.com>

	* net/remoteconnection.cc: Fix comment grammar.

Fri Apr 06 18:10:31 BST 2007  Olly Betts <olly@survex.com>

	* net/remoteconnection.cc: Deal with the exceptional case first.

Fri Apr 06 17:51:20 BST 2007  Olly Betts <olly@survex.com>

	* net/remoteconnection.cc: Use string::append(ptr, size) in preference
	  to string::append(ptr, ptr + size).

Fri Apr 06 11:45:39 BST 2007  Olly Betts <olly@survex.com>

	* api/omqueryinternal.cc,backends/flint/flint_database.cc,
	  backends/flint/flint_database.h,backends/flint/flint_postlist.cc,
	  backends/inmemory/inmemory_database.cc,
	  backends/inmemory/inmemory_database.h,
	  backends/quartz/quartz_database.cc,backends/quartz/quartz_database.h,
	  backends/quartz/quartz_postlist.cc,
	  backends/remote/remote-database.cc,common/database.h,
	  common/remote-database.h: Refactor to eliminate do_open_post_list
	  and any unnecessary call to term_exists().

Fri Apr 06 11:44:25 BST 2007  Olly Betts <olly@survex.com>

	* tests/api_wrdb.cc: Just use TEST on a boolean value rather than
	  TEST_EQUAL against true/false.

Fri Apr 06 08:53:46 BST 2007  Olly Betts <olly@survex.com>

	* net/remoteserver.cc: Remove "N" which we calculate but never use!

Fri Apr 06 08:17:00 BST 2007  Olly Betts <olly@survex.com>

	* backends/flint/Makefile.mk,backends/flint/flint_check.cc,
	  backends/flint/flint_check.h,bin/Makefile.mk,bin/xapian-check.cc:
	  Fix xapian-check not to use libquartzcheck.la.

Fri Apr 06 07:20:47 BST 2007  Olly Betts <olly@survex.com>

	* bin/Makefile.mk,bin/xapian-check.cc: Add new "xapian-check" program
	  which performs consistency checks on a flint database.  

Fri Apr 06 06:25:36 BST 2007  Olly Betts <olly@survex.com>

	* bin/quartzcheck.cc: Test if this is a quartz database by looking at
	  "meta" not "record_DB".  If "record_DB" is >= 2GB and we don't have
	  a LFS aware stat function then stat can fail even though the file is